# ZeroStudio

./: .gitignore  .nyx.yml  IMPLEMENTATION_SUMMARY.md  README (1).md  README.md  README_TabFile.md  USAGE_EXAMPLES.md  Using-Tutorials.md  ai代码.txt  app_strings.xml  build.gradle.kts  build.txt  chatai.yaml  dependencies.txt  git  gradle.properties  mcp指令集定义.md  mcp指令集定义范本(1).txt  mcp指令集定义范本.md  mcp计划.txt  sdk  settings.gradle.kts  signing.properties  termuxbuild.txt  现有bug.txt
.github/: FUNDING.yml
.nyx/: CHANGELOG.tpl
ANR/: build.gradle
UIlsp/: build.gradle
actions/: build.gradle.kts
annotation-processors-ksp/: build.gradle.kts
app/: GPTMobileSettingActivity.kt  SearchAction.kt  build.gradle.kts  google-services.json  multidex-main-dex-rules.pro  proguard-rules.pro  zero_studio_signa.keystore
build-info/: build.gradle.kts
build-logic/: build.gradle.kts  gradle.properties  settings.gradle.kts
changelogs/: v202506010.md  v20250701.md
chatai/: build.gradle.kts  gradle.properties  settingsgradlekts
chatai1/: build.gradle.kts
common/: build.gradle.kts
demo/: AboutScreen.kt
docs/: ChatAiFragment.kt  CommandRegistry.kt  GradleHandler2.kt  KotlinFormatter.kt  McpCommandHandler.kt  NewFileOrFolderAction.kt  SearchAction.kt  TextEditorActivity.java  mcp所有代码.txt  线性铅笔.xml  编辑 (1).xml  编辑颜色.xml
editor/: build.gradle.kts  proguard-rules.pro
eventbus/: build.gradle.kts
eventbus-android/: build.gradle.kts
eventbus-events/: build.gradle.kts
gradle/: ktlsp.versions.toml  libs.versions.toml
termux/termux-app/src/main/cpp/: CMakeLists.txt
(+1320 files in other folders)
